--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.28",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
