--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
+    "lodash-es": "^4.17.21",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "vue": "^3.2.13",
