添加网关8888端口, 以运行-m standalone运行nacos后即可通过网关调用用户服务

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>user-service</module>
         <module>commons</module>
+        <module>gateway-service</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
