完成获取车次接口

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -26,22 +26,22 @@ spring:
           predicates: # 路由断言，判断请求是否符合规则
             - Path=/allTrain,/addTrain,/delTrain/**,/modifyTrain/**  # 判断请求路径
 
-#      globalcors:
-#        add-to-simple-url-handler-mapping: true # 放行options请求
-#        cors-configurations:
-#          '[/**]':
-#            allowedOriginPatterns: "*"
-#            #            allowedOrigins: # 允许哪些网站的跨域请求
-#            #              - "http://www.scblogs.cn"
-#            #              - "http://127.0.0.1"
-#            allowedMethods: # 允许的跨域ajax请求方式
-#              - "GET"
-#              - "POST"
-#              - "DELETE"
-#              - "PUT"
-#              - "OPTIONS"
-#            allowedHeaders: "*" # 允许在请求中携带的头信息
-#            allowCredentials: true # 是否允许携带cookie
-#            maxAge: 360000 # 本次跨域检查的有效期
+      globalcors:
+        add-to-simple-url-handler-mapping: true # 放行options请求
+        cors-configurations:
+          '[/**]':
+            allowedOriginPatterns: "*"
+            #            allowedOrigins: # 允许哪些网站的跨域请求
+            #              - "http://www.scblogs.cn"
+            #              - "http://127.0.0.1"
+            allowedMethods: # 允许的跨域ajax请求方式
+              - "GET"
+              - "POST"
+              - "DELETE"
+              - "PUT"
+              - "OPTIONS"
+            allowedHeaders: "*" # 允许在请求中携带的头信息
+            allowCredentials: true # 是否允许携带cookie
+            maxAge: 360000 # 本次跨域检查的有效期
 
 
