--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -12,19 +12,19 @@ spring:
         - id: user-service # 路由标识，必须唯一
           uri: lb://user-service # 路由的目标地址，lb为load balance，负载均衡
           predicates: # 路由断言，判断请求是否符合规则
-            - Path=/user/**,/register,/login,/modifyUserInfo  # 判断请求路径
+            - Path=/user/**,/register,/login,/modifyUserInfo,/current-user,/all-users  # 判断请求路径
 
         # 车票服务
         - id: ticket-service # 路由标识，必须唯一
           uri: lb://ticket-service # 路由的目标地址，lb为load balance，负载均衡
           predicates: # 路由断言，判断请求是否符合规则
-            - Path=  # 判断请求路径
+            - Path=/addTicket/**,/delTicket/**,/myTicket  # 判断请求路径
 
         # 车次服务
         - id: train-service # 路由标识，必须唯一
           uri: lb://train-service # 路由的目标地址，lb为load balance，负载均衡
           predicates: # 路由断言，判断请求是否符合规则
-            - Path=/allTrain,/addTrain,/delTrain/**,/modifyTrain/**  # 判断请求路径
+            - Path=/allTrain,/addTrain,/delTrain/**,/modifyTrain/**,/train/return-ticket/**,/train/try-selling-ticket/**,/train/**,  # 判断请求路径
 
       globalcors:
         add-to-simple-url-handler-mapping: true # 放行options请求
