--- a/train-service/src/main/resources/bootstrap.yml
+++ b/train-service/src/main/resources/bootstrap.yml
@@ -15,3 +15,10 @@ spring:
         dashboard: localhost:8858
       block-page: /blocked
       web-context-unify: false
+
+seata:
+  service:
+    vgroup-mapping:
+      train-service-seata-service-group: default
+    grouplist:
+      default: localhost:8868
